@@ -35,12 +35,12 @@
 #  endif
 #  pragma push_macro("unlink")
 #    define unlink __crt_invalid_unlink
-#    include RUNTIME_INC(stdio.h)
+#    include RUNTIME_INC(Stdio.h)
 #  pragma pop_macro("unlink")
 #pragma pop_macro("_POSIX_")
 #pragma pop_macro("__STDC__")
 
-#include RUNTIME_INC(stdarg.h)
+#include RUNTIME_INC(Stdarg.h)
 
 //
 // redefine with path conversion attached. We simply hope
