@@ -180,3 +180,5 @@ added capabilities to get symbol information for a certain address. this finds t
 added capabilities to parity.runtime to handle exceptions the way other Unices do, and write a "core" file (plain text) instead of showing a messagebox.
 
 all parity built images now set the mode for stdin/out/err to _O_BINARY for compatability with other Unices.
+
+changed lots of include directives in parity.runtime to use some uppercase letters to avoid clashes with defines.
